# pathnorm_pybind

./: .gitmodules  CMakeLists.txt  README.md  Untitled.ipynb  pyproject.toml  python_program.py  setup.py
include/pathnorm/: pathnorm.hpp
py/py_pathnorm_proxmap/: jax_pathnorm_proxmap.py  np_pathnorm_proxmap.py  pathnorm_proxmap.py
src/: main.cpp  pathnorm.hpp
tests/: test_cpp_numpy_jnp.py
